Bug 415784 - The initial cursor position in the properties dialog of a state should be set to the name field
Summary: The initial cursor position in the properties dialog of a state should be set...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.30.0 (KDE Applications 19.12.0)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-02 01:01 UTC by Ralf Habacker
Modified: 2020-01-02 01:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.30.1 (KDE Applications 19.12.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-01-02 01:01:05 UTC
STEPS TO REPRODUCE
1. start umbrello
2. add state diagram
3. add state
4. select state and open property dialog

OBSERVED RESULT
The 'ok' button is selected first

EXPECTED RESULT
The initial cursor should be placed in the name input field

SOFTWARE/OS VERSIONS
Windows: 7

ADDITIONAL INFORMATION
The same applies to the properties dialog of activities
Comment 1 Ralf Habacker 2020-01-02 01:04:04 UTC
Git commit 57df796dbb90e14d6e5a0699cdd63ae39d381380 by Ralf Habacker.
Committed on 02/01/2020 at 01:02.
Pushed by habacker into branch 'release/19.12'.

Fix 'The initial cursor position in the properties dialog of a state should be set to the name field'
FIXED-IN:2.30.1 (KDE Applications 19.12.1)

M  +1    -0    umbrello/dialogs/activitydialog.cpp
M  +1    -0    umbrello/dialogs/statedialog.cpp

https://invent.kde.org/kde/umbrello/commit/57df796dbb90e14d6e5a0699cdd63ae39d381380