Fix 'The initial cursor position in the properties dialog of a state should be set to the name field'

BUG:415784
FIXED-IN:2.30.1 (KDE Applications 19.12.1)